got buttons working finally

--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
 </head>
 <body>
     <article>
-        <head id="#whereTheBtnsGo">
-but stuff
-        </head>
+        <header>
+            <div id="btns">
+                
+            </div>
+        </header>
         <main>
 
         </main>
