--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <article>
         <header>
             <div id="btns">
-                
+
             </div>
         </header>
-        <main>
-
+        <main id="gifs">
+dcwdcwdc
         </main>
         <footer>
 
