--- a/index.html
+++ b/index.html
@@ -4,21 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-
+    <link rel="stylesheet" type="text/css" href="assets/css.css">
     <title>Giftastic</title>
 </head>
 <body>
     <article>
-        <header>
+        <header><h1>A Galaxy of Possibiliogifs!!!</h1>
             <div id="btns">
 
             </div>
         </header>
         <main id="gifs">
-dcwdcwdc
+dcwdcwdc vgfcxhtyvkbjnli
         </main>
         <footer>
-
+            farts j kk lliuvrdsa
         </footer>
     </article>
     <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.4.0.min.js"></script>
