added search stuff

--- a/index.html
+++ b/index.html
@@ -13,6 +13,13 @@
             <div id="btns">
 
             </div>
+            <div>
+                <form>
+                    <label for="search">Space 'n Stuff</label>
+                    <input type="text" id="searchInput">
+                    <input id="addTopic" type="submit" value="submit">
+                </form>
+            </div>
         </header>
         <main id="gifs">
 dcwdcwdc vgfcxhtyvkbjnli
