search bar is werkn :)

--- a/index.html
+++ b/index.html
@@ -10,22 +10,22 @@
 <body>
     <article>
         <header><h1>A Galaxy of Possibiliogifs!!!</h1>
-            <div id="btns">
-
-            </div>
             <div>
                 <form>
                     <label for="search">Space 'n Stuff</label>
-                    <input type="text" id="searchInput">
+                    <input type="text" id="search">
                     <input id="addTopic" type="submit" value="submit">
                 </form>
             </div>
+            <div id="btns">
+
+            </div>
         </header>
         <main id="gifs">
-dcwdcwdc vgfcxhtyvkbjnli
+
         </main>
         <footer>
-            farts j kk lliuvrdsa
+            
         </footer>
     </article>
     <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.4.0.min.js"></script>
